--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -68,6 +68,18 @@
 @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400i,700i');
 @import url('https://fonts.googleapis.com/css?family=Ubuntu&amp;display=swap');
 @import url('https://fonts.googleapis.com/css?family=Cairo:400,600,700&amp;display=swap');
+@import 'rc-slider/assets/index.css';
+
+@font-face {
+  font-family: 'slick';
+  src: url('../../../node_modules/slick-carousel/slick/fonts/slick.eot');
+  src: url('../../../node_modules/slick-carousel/slick/fonts/slick.eot?#iefix') format('embedded-opentype'),
+       url('../../../node_modules/slick-carousel/slick/fonts/slick.woff') format('woff'),
+       url('../../../node_modules/slick-carousel/slick/fonts/slick.ttf') format('truetype'),
+       url('../../../node_modules/slick-carousel/slick/fonts/slick.svg#slick') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 
 body{
     font-family: 'Cairo', sans-serif;
@@ -864,8 +876,9 @@ body{
     }
 }
 .header-top .top-bar{
-    max-width: 50%;
+    max-width: 60%;
     float: left;
+    color:#fff;
 }
 .header-top .right{
     float: right;
@@ -5794,7 +5807,6 @@ body.open-overlay #overlay{
     text-align: center;
     font-weight: 700;
     padding: 10px;
-    border: 2px solid #ffffff;
 }
 .btn.btn-thin:hover{
     color: #ffffff;
@@ -6791,11 +6803,11 @@ body.open-overlay #overlay{
 }
 .slider-opt03__layout01 .media{
     z-index: 10;
-    background-image: url('../images/home-03/slide-01.jpg');
+    background-image: url('../../assets/images/home-03/green-slide-02.jpg');
     background-repeat: no-repeat;
     background-position: center center;
     background-size: cover;
-    height: 660px;
+    height: 550px;
 }
 .slider-opt03__layout01 .media .child-elememt{
     display: inline-block;
@@ -6819,7 +6831,7 @@ body.open-overlay #overlay{
     display: inline-block;
     position: absolute;
     top: 18%;
-    right: 13%;
+        left: 10%;
     margin: 0 5px 0 0;
     z-index: 20;
     -webkit-transition: transform 0.7s ease 0.7s;
@@ -7200,23 +7212,23 @@ li.slick-current .slider-opt04__layout01 .buttons .btn{
     clear: both;
     font-size: 0;
     line-height: 0;
-    padding-top: 86px;
+       padding-top: 36px;
 }
 .biolife-banner__special .media{
-    display: inline-block;
-    width: 57.265%;
+      display: inline-block;
+    width: 50%;
     padding-left: 25px;
+    text-align: center;
 }
 .biolife-banner__special .text-content{
-    display: inline-block;
+        display: inline-block;
     vertical-align: top;
-    width: 42.735%;
+    width: 50%;
     line-height: 1;
     text-align: center;
-    padding-top: 41px;
 }
 .biolife-banner__special .text-content .first-line{
-    font-size: 50px;
+    font-size: 40px;
     font-weight: 700;
     color: #000000;
     display: block;
@@ -7231,7 +7243,7 @@ li.slick-current .slider-opt04__layout01 .buttons .btn{
     margin: 17px 0 0;
 }
 .biolife-banner__special .text-content .third-line{
-    font-size: 35px;
+    font-size: 30px;
     color: #666666;
     display: block;
     font-weight: 600;
@@ -7240,13 +7252,13 @@ li.slick-current .slider-opt04__layout01 .buttons .btn{
 }
 .biolife-banner__special .text-content .third-line i{
     font-weight: 700;
-    color: #222222;
+    color: #ff8800;
     font-family: 'Playfair Display', sans-serif;
-    font-size: 40px;
+    font-size: 35px;
 }
 .biolife-banner__special .product-detail{
     display: block;
-    margin-top: 65px;
+    margin-top: 36px;
 }
 .biolife-banner__special .product-detail .product-name{
     display: block;
@@ -7468,7 +7480,7 @@ li.slick-current .slider-opt04__layout01 .buttons .btn{
     padding-top: 14px;
 }
 .biolife-service__type01 .txt-show-01{
-    font-size: 220px;
+    font-size: 200px;
     color: #eeeeee;
     font-weight: 700;
     display: block;
@@ -7490,7 +7502,7 @@ li.slick-current .slider-opt04__layout01 .buttons .btn{
     z-index: 2;
 }
 .biolife-service__type01 .services-list{
-    margin-top: -9px;
+    margin-top: 30px;
     position: relative;
     z-index: 1;
 }
@@ -7501,7 +7513,6 @@ li.slick-current .slider-opt04__layout01 .buttons .btn{
     margin: 0;
     display: inline-block;
     width: 100%;
-    border: 2px solid #e6e6e6;
     border-radius: 3px;
     padding-top: 19px;
     padding-bottom: 18px;
@@ -7509,7 +7520,7 @@ li.slick-current .slider-opt04__layout01 .buttons .btn{
 .services-list li{
     list-style: none;
     display: inline-block;
-    width: 33.333333%;
+    width: 25%;
     padding-top: 10px;
     padding-bottom: 22px;
 }
@@ -7538,7 +7549,6 @@ li.slick-current .slider-opt04__layout01 .buttons .btn{
     font-size: 35px;
     display: inline-block;
     padding-top: 1px;
-    margin-left: 38px;
 }
 .service-inner .srv-name{
     display: inline-block;
@@ -7806,7 +7816,7 @@ li.slick-current .slider-opt04__layout01 .buttons .btn{
     right: 0;
     line-height: 1;
     display: inline-block;
-    padding-top: 217px;
+    padding-top: 57px;
 }
 .biolife-banner__promotion .text-content .text-wrap{
     padding-left: 70px;
@@ -7815,7 +7825,7 @@ li.slick-current .slider-opt04__layout01 .buttons .btn{
     font-size: 30px;
     line-height: 35px;
     font-family: 'Playfair Display', sans-serif;
-    color: #ffffff;
+    color: #000;
     display: block;
     margin: 0;
     max-width: 370px;
@@ -7825,7 +7835,7 @@ li.slick-current .slider-opt04__layout01 .buttons .btn{
     margin: 6px 0 0;
     font-size: 60px;
     line-height: 55px;
-    color: #ffffff;
+    color: #000;
     font-weight: 700;
     max-width: 370px;
 }
@@ -7834,7 +7844,7 @@ li.slick-current .slider-opt04__layout01 .buttons .btn{
     line-height: 24px;
     display: block;
     margin: 22px 0 0;
-    color: #ffffff;
+    color: #000;
     max-width: 370px;
 }
 .biolife-banner__promotion .product-detail{
@@ -7846,7 +7856,7 @@ li.slick-current .slider-opt04__layout01 .buttons .btn{
     font-size: 40px;
     line-height: 1;
     font-weight: 700;
-    color: #ffffff;
+    color: #000;
     display: inline-block;
     margin: 0 30px 0 0;
 }
@@ -7877,8 +7887,8 @@ li.slick-current .slider-opt04__layout01 .buttons .btn{
 .biolife-banner__promotion{
     display: inline-block;
     width: 100%;
-    height: 710px;
-    background-image: url("../images/home-03/bg_banner_pomotion_org.png");
+    height: 440px;
+    background-image: url("../images/home-03/promotion-banner.jpg");
     background-repeat: no-repeat;
     background-size: auto;
     background-position: center top;
@@ -13815,7 +13825,6 @@ body.open-quickview-block .biolife-quickview-block{
         right: 0;
         bottom: 0;
         background-color: transparent;
-        border: 1px solid #e6e6e6;
         z-index: 5;
         visibility: hidden;
         -webkit-transition: all 0.3s ease;
@@ -13824,7 +13833,7 @@ body.open-quickview-block .biolife-quickview-block{
         -o-transition: all 0.3s ease;
         transition: all 0.3s ease;
     }
-    .post-item.effect-04 .thumbnail>a::after,
+    /* .post-item.effect-04 .thumbnail>a::after,
     .post-item.effect-01 .thumbnail>a::after{
         content: '';
         display: block;
@@ -13843,7 +13852,7 @@ body.open-quickview-block .biolife-quickview-block{
         -ms-transition: all 0.3s ease;
         -o-transition: all 0.3s ease;
         transition: all 0.3s ease;
-    }
+    } */
     .post-item.effect-04 .thumbnail:hover .post-date,
     .post-item.effect-01 .thumbnail:hover .post-date{
         opacity: 0;
@@ -13960,9 +13969,7 @@ body.open-quickview-block .biolife-quickview-block{
         margin-left: -30px;
         padding-left: 30px;
     }
-    .header-area:not(.layout-01):not(.layout-02) .primary-menu>ul .wrap-megamenu{
-        margin-left: -30px;
-    }
+  
     .header-area.layout-01 .biolife-cart-info .minicart-block{
         margin-left: 0;
     }
@@ -14108,12 +14115,12 @@ body.open-quickview-block .biolife-quickview-block{
     .biolife-carousel.products-list.vertical-layout-02 .slick-list{
         padding: 15px;
     }
-    .biolife-carousel.products-list:not(.default-product-style):hover{
+    /* .biolife-carousel.products-list:not(.default-product-style):hover{
         margin-bottom: -150px;
-    }
-    .biolife-carousel.products-list:not(.default-product-style):hover .slick-list{
+    } */
+    /* .biolife-carousel.products-list:not(.default-product-style):hover .slick-list{
         padding-bottom: 150px;
-    }
+    } */
     .contain-product.layout-02:hover,
     .contain-product.layout-default:hover{
         -webkit-box-shadow: 0 0 5px 0 rgba(0,0,0,0.2);
@@ -14348,7 +14355,7 @@ body.open-quickview-block .biolife-quickview-block{
     }
     .service-inner:not(.style-02){
         width: auto;
-        text-align: left;
+        text-align: center;
     }
     .service-inner:not(.style-02) .srv-name{
         width: auto;
@@ -14667,18 +14674,17 @@ body.open-quickview-block .biolife-quickview-block{
 .product-card {
     position: relative;
     background: white;
-    border-radius: 20px;
-    box-shadow: 0 10px 40px rgba(0, 0, 0, 0.08);
     overflow: hidden;
     transition: transform 0.4s ease, box-shadow 0.4s ease;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    margin: 30px auto;
+    margin: 10px auto;
+    border: 1px solid #ddd;
 }
 
-.product-card:hover {
-    transform: translateY(-10px);
+/* .product-card:hover {
+    transform: translateY(-1px);
     box-shadow: 0 20px 50px rgba(0, 0, 0, 0.15);
-}
+} */
 
 .product-badge {
     position: absolute;
@@ -14774,7 +14780,7 @@ body.open-quickview-block .biolife-quickview-block{
 
 .product-price {
     display: flex;
-    flex-direction: column;
+  
 }
 
 .price-was {
@@ -14787,11 +14793,18 @@ body.open-quickview-block .biolife-quickview-block{
 .price-now {
     font-size: 22px;
     font-weight: 700;
-    color: #18181B;
+    color: #ff6800;
+    text-decoration: line-through;
+}
+.discount-now{
+     font-size: 22px;
+    font-weight: 700;
+    color: #000;
+    padding: 0px 10px 0 0;
 }
 
 .product-button {
-    background: linear-gradient(45deg, #18181B, #27272A);
+        background: linear-gradient(45deg, #0e8e02, #0e8e02);
     color: white;
     border: none;
     border-radius: 12px;
@@ -14890,4 +14903,233 @@ body.open-quickview-block .biolife-quickview-block{
         width: 100%;
         justify-content: center;
     }
+}
+
+.product-tab .nav-tabs{
+    justify-content: center;
+}
+.active-input:checked{
+        background-color: #10e03a;
+    border-color: #10e03a;
+}
+
+/*------Custom Css--------------------*/
+.service_img{
+     margin: 0 auto !important;
+    width: 50%;
+    display: block;
+}
+.short_head{
+    position: relative;
+}
+.bd-step__title{
+        font-size: 42px;
+    position: absolute;
+    top: 65%;
+    left: 45%;
+    transform: translate(0);
+    z-index: 11;
+    color: #000;
+}
+.biolife-service{
+    
+    padding: 60px 0 60px 0;
+      background: #fff7f1;
+}
+.thank-you-head{
+    color: #ff7000;
+    font-weight: 600;
+}
+.order-img {
+    width: 10%;
+}
+.thank-you-icon{
+    font-size: 7rem;
+    color: #ff7000;
+}
+p{
+    font-size: 15px;
+    color: #666666;
+    line-height: 24px;
+}
+.special-slide ul{
+    list-style: none;
+        bottom: 0;
+}
+ 
+.deal_img{
+  width: 100%;
+}
+.about-img-grp{
+    position: relative;
+}
+.about_img1{
+    width: 350px;
+    height: 400px;
+    object-fit: cover;
+    object-position: center;
+    border-style: solid;
+    border-width: 8px 8px 8px 8px;
+    border-color: #FFFFFF;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+    border-radius: 5px 5px 5px 5px;
+}
+.about_img2{
+        width: 260px;
+    height: 260px;
+    object-fit: cover;
+    object-position: center;
+    border-style: solid;
+    border-width: 8px 8px 8px 8px;
+    border-color: #FFFFFF;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+    border-radius: 5px 5px 5px 5px;
+    position: absolute;
+    z-index: 99;
+    bottom: -110px;
+    right: 80px;
+}
+.about_img3{
+    width: 240px;
+    height: 260px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 5px 5px 5px 5px;
+    position: absolute;
+    right: 60px;
+    top: 11%;
+}
+.about_img4{
+        width: 130px;
+    height: 140px;
+    object-fit: cover;
+    object-position: center;
+    position: absolute;
+    z-index: 99;
+    left: 7%;
+    bottom: -50px;
+}
+.about-content{
+    justify-content: space-between;
+        padding: 20px 0 0 0px;
+
+}
+.about-short-txt h4{
+    padding-left: 10px;
+}
+.about-lst{
+    list-style: none;
+    padding: 39px 0 0 0;
+}
+.about-us{
+    position: relative;
+        margin: 70px 0 70px 0;
+}
+.about-body .about-short-head{
+    color: #ff6800;
+}
+.about-body .about-main-head{
+       font-size: 48px;
+    line-height: 60px;
+    color: #333333;
+    font-weight: 700;
+    display: block;
+    margin: 0;
+}
+.call-us{
+    font-size: 30px;
+    font-weight: 700;
+    margin: 47px 0 0 0;
+}
+.call-us span{
+        background: #ff6800;
+    color: #fff;
+    padding: 5px 20px 5px 20px;
+    border-radius: 50%;
+    font-size: 26px;
+    box-shadow: 1px 1px 9px #b1b1b1;
+}
+.slick-slide img {
+    display: block;
+    width: 70%;
+    margin: 0 auto;
+}
+.search-results{
+    position: absolute;
+    background: #fff;
+    z-index: 999; 
+    width: 100%;
+    list-style: none;
+}
+.icon-qty-combine .qty {
+    background: #ff6800 !important;
+}
+.shop-cart .product-image{
+   
+    text-align: center;
+
+}
+.shop-cart .product-image img{
+    width: 100%;
+    height: auto;
+}
+.product-title a{
+    color: #000;
+}
+.shop-cart .product-title {
+    font-size: 17px;
+    font-weight: 500;
+}
+.shop-cart .discount-now {
+    font-size: 17px;
+    font-weight: 500;
+    padding: 0px 5px 0 0px;
+}
+.shop-cart .price-now {
+    font-size: 17px;
+    font-weight: 500;
+}
+input[type="file"]:focus, input[type="radio"]:focus, input[type="checkbox"]:focus
+ {
+    outline: none;
+}
+.product-filter-content{
+    padding: 0;
+}
+.readmore{
+    font-size: 14px;
+    line-height: 24px;
+    color: #0e8e02;
+    font-weight: 700;
+    display: inline-block;
+    border-radius: 9999px;
+    text-transform: uppercase;
+    padding: 8px 10px;
+    margin-right: 0;
+    padding: 0;
+}
+.group-buttons{
+    margin: 0;
+}
+.post-meta__item{
+    padding: 0;
+    margin: 0;
+}
+.blog-content h3{
+    font-weight: 700;
+}
+.signin-content{
+        box-shadow: 0px 0px 27px #ddd;
+    padding: 0 30px 0 30px;
+}
+.biolife-logo img{
+     width: 66%;
+}
+.looter-logo img{
+     width: 66%;
+}
+
+.contain-product__deal-layout:hover.slick-slide img{
+    transform: scale(1.05);
+     transition: transform 0.3s ease-in-out;
 }
